--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "npm-run-all -p dev:*",
     "dev:server": "babel-node proxy-server.js",
-    "dev:webpack": "webpack-dev-server --inline --hot --port 3000 --https",
+    "dev:webpack": "webpack-dev-server --inline --hot --port 8080 --host 0.0.0.0",
     "public": "npm-run-all -p dev:server public:webpack",
-    "public:webpack": "webpack-dev-server --inline --hot --https --host 192.168.100.100 --port 3000",
+    "public:webpack": "webpack-dev-server --inline --hot --https --host 0.0.0.0 --port 8080",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
