--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:webpack": "webpack-dev-server --inline --hot --port 8080 --host 0.0.0.0",
     "public": "npm-run-all -p dev:server public:webpack",
     "public:webpack": "webpack-dev-server --inline --hot --https --host 0.0.0.0 --port 8080",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "deploy": "mkdir http-sample/public/todo 2>/dev/null ; cp index.html http-sample/public/todo/ && cp -r dist/ http-sample/public/todo/ && cf push http-sample -p http-sample"
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
